New home design work

--- a/newhome.html
+++ b/newhome.html
@@ -176,16 +176,145 @@ layout: plain
 
 <!-- Projects -->
 <section class="px-4">
-    <div class="rounded-xl py-28 bg-amber-100 text-amber-950">
-        <div class="container px-8 max-w-screen-2xl mx-auto">
+    <div class="rounded-xl py-28 bg-amber-200" style="color: #2b1102">
+        <div class="container px-8 max-w-screen-xl mx-auto">
             <div class="pb-16 border-solid border-slate-700">
                 <h2 class="text-5xl font-bold font-display mb-4">Projects</h2>
                 <p class="text-xl max-w-160">Website design & development for an on-demand accountability app for solopreneurs.</p>
             </div>
 
-            <div class="grid md:grid-cols-3 gap-4">
+            <div>
+                <img src="/assets/img/project3.png" class="rounded-xl">
+                <div class="mt-6">
+                    <div class="mb-2">
+                        <a class="inline-block mr-3 py-1 px-3 rounded-[999px] text-xs bg-amber-300 rounded-[999px]">
+                            <div class="flex items-center gap-1">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                        class="icon icon-tabler icons-tabler-outline icon-tabler-access-point">
+                                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                        <path d="M12 12l0 .01" />
+                                        <path d="M14.828 9.172a4 4 0 0 1 0 5.656" />
+                                        <path d="M17.657 6.343a8 8 0 0 1 0 11.314" />
+                                        <path d="M9.168 14.828a4 4 0 0 1 0 -5.656" />
+                                        <path d="M6.337 17.657a8 8 0 0 1 0 -11.314" />
+                                    </svg>
+                                </div>
+                                <div class="">Pragmatic</div>
+                            </div>
+                        </a>
+                        <a class="inline-block mr-3 py-1 px-3 rounded-[999px] text-xs bg-amber-300 rounded-[999px]">
+                            <div class="flex items-center gap-1">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                        class="icon icon-tabler icons-tabler-outline icon-tabler-api-app">
+                                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                        <path d="M12 15h-6.5a2.5 2.5 0 1 1 0 -5h.5" />
+                                        <path d="M15 12v6.5a2.5 2.5 0 1 1 -5 0v-.5" />
+                                        <path d="M12 9h6.5a2.5 2.5 0 1 1 0 5h-.5" />
+                                        <path d="M9 12v-6.5a2.5 2.5 0 0 1 5 0v.5" />
+                                    </svg>
+                                </div>
+                                <div class="">Team-oriented</div>
+                            </div>
+                        </a>
+                    </div>
+                    <h3 class="text-3xl font-bold font-display mb-2">A design system</h3>
+                    <p class="mb-4 max-w-160">Website design & development for an on-demand accountability app for solopreneurs.</p>
+                </div>
+            </div>
+
+            <div class="mt-16">
+                <img src="/assets/img/project3.png" class="rounded-xl">
+                <div class="mt-6">
+                    <div class="mb-2">
+                        <a class="inline-block mr-3 py-1 px-3 rounded-[999px] text-xs bg-amber-300 rounded-[999px]">
+                            <div class="flex items-center gap-1">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                        class="icon icon-tabler icons-tabler-outline icon-tabler-access-point">
+                                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                        <path d="M12 12l0 .01" />
+                                        <path d="M14.828 9.172a4 4 0 0 1 0 5.656" />
+                                        <path d="M17.657 6.343a8 8 0 0 1 0 11.314" />
+                                        <path d="M9.168 14.828a4 4 0 0 1 0 -5.656" />
+                                        <path d="M6.337 17.657a8 8 0 0 1 0 -11.314" />
+                                    </svg>
+                                </div>
+                                <div class="">Pragmatic</div>
+                            </div>
+                        </a>
+                        <a class="inline-block mr-3 py-1 px-3 rounded-[999px] text-xs bg-amber-300 rounded-[999px]">
+                            <div class="flex items-center gap-1">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                        class="icon icon-tabler icons-tabler-outline icon-tabler-api-app">
+                                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                        <path d="M12 15h-6.5a2.5 2.5 0 1 1 0 -5h.5" />
+                                        <path d="M15 12v6.5a2.5 2.5 0 1 1 -5 0v-.5" />
+                                        <path d="M12 9h6.5a2.5 2.5 0 1 1 0 5h-.5" />
+                                        <path d="M9 12v-6.5a2.5 2.5 0 0 1 5 0v.5" />
+                                    </svg>
+                                </div>
+                                <div class="">Team-oriented</div>
+                            </div>
+                        </a>
+                    </div>
+                    <h3 class="text-3xl font-bold font-display mb-2">A design system</h3>
+                    <p class="mb-4 max-w-160">Website design & development for an on-demand accountability app for solopreneurs.</p>
+                </div>
+            </div>
+
+            <div class="mt-16">
+                <img src="/assets/img/project3.png" class="rounded-xl">
+                <div class="mt-6">
+                    <div class="mb-2">
+                        <a class="inline-block mr-3 py-1 px-3 rounded-[999px] text-xs bg-amber-300 rounded-[999px]">
+                            <div class="flex items-center gap-1">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                        class="icon icon-tabler icons-tabler-outline icon-tabler-access-point">
+                                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                        <path d="M12 12l0 .01" />
+                                        <path d="M14.828 9.172a4 4 0 0 1 0 5.656" />
+                                        <path d="M17.657 6.343a8 8 0 0 1 0 11.314" />
+                                        <path d="M9.168 14.828a4 4 0 0 1 0 -5.656" />
+                                        <path d="M6.337 17.657a8 8 0 0 1 0 -11.314" />
+                                    </svg>
+                                </div>
+                                <div class="">Pragmatic</div>
+                            </div>
+                        </a>
+                        <a class="inline-block mr-3 py-1 px-3 rounded-[999px] text-xs bg-amber-300 rounded-[999px]">
+                            <div class="flex items-center gap-1">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                        class="icon icon-tabler icons-tabler-outline icon-tabler-api-app">
+                                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                        <path d="M12 15h-6.5a2.5 2.5 0 1 1 0 -5h.5" />
+                                        <path d="M15 12v6.5a2.5 2.5 0 1 1 -5 0v-.5" />
+                                        <path d="M12 9h6.5a2.5 2.5 0 1 1 0 5h-.5" />
+                                        <path d="M9 12v-6.5a2.5 2.5 0 0 1 5 0v.5" />
+                                    </svg>
+                                </div>
+                                <div class="">Team-oriented</div>
+                            </div>
+                        </a>
+                    </div>
+                    <h3 class="text-3xl font-bold font-display mb-2">A design system</h3>
+                    <p class="mb-4 max-w-160">Website design & development for an on-demand accountability app for solopreneurs.</p>
+                </div>
+            </div>
+
+            <!-- <div class="grid md:grid-cols-3 gap-4">
                 <div>
-                    <img src="/assets/img/project-example.png" class="mb-6" style="border-radius: .6rem;">
+                    <img src="/assets/img/project5.png" class="mb-6" style="border-radius: .6rem;">
                     <div>
                         <div class="mb-2">
                             <a class="inline-block mr-3 py-1 px-3 rounded-[999px] text-xs bg-amber-200 rounded-[999px]">
@@ -227,7 +356,7 @@ layout: plain
                     </div>
                 </div>
                 <div>
-                    <img src="/assets/img/project-example.png" class="mb-6" style="border-radius: .6rem;">
+                    <img src="/assets/img/project5.png" class="mb-6" style="border-radius: .6rem;">
                     <div>
                         <div class="mb-2">
                             <a class="inline-block mr-3 py-1 px-3 rounded-[999px] text-xs bg-amber-200 rounded-[999px]">
@@ -269,7 +398,7 @@ layout: plain
                     </div>
                 </div>
                 <div>
-                    <img src="/assets/img/project-example.png" class="mb-6" style="border-radius: .6rem;">
+                    <img src="/assets/img/project5.png" class="mb-6" style="border-radius: .6rem;">
                     <div>
                         <div class="mb-2">
                             <a class="inline-block mr-3 py-1 px-3 rounded-[999px] text-xs bg-amber-200 rounded-[999px]">
@@ -310,12 +439,12 @@ layout: plain
                         <p class="mb-4">Website design & development for an on-demand accountability app for solopreneurs.</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- <div class="grid md:grid-cols-3 gap-4 mb-20" style="grid-template-columns: 4fr 3fr 3fr;">
                 <div class="md:col-span-1 max-w-full flex flex-col">
                     <div class="mb-4">
-                        <a class="inline-block mr-3 py-1 px-3 rounded-[999px] text-xs bg-amber-200 rounded-[999px]">
+                        <a class="inline-block mr-3 py-1 px-3 rounded-[999px] text-xs bg-amber-300 rounded-[999px]">
                             <div class="flex items-center gap-1">
                                 <div>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -332,7 +461,7 @@ layout: plain
                                 <div class="">Pragmatic</div>
                             </div>
                         </a>
-                        <a class="inline-block mr-3 py-1 px-3 rounded-[999px] text-xs bg-amber-200 rounded-[999px]">
+                        <a class="inline-block mr-3 py-1 px-3 rounded-[999px] text-xs bg-amber-300 rounded-[999px]">
                             <div class="flex items-center gap-1">
                                 <div>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -353,7 +482,7 @@ layout: plain
                     <p class="mb-4">Website design & development for an on-demand accountability app for solopreneurs.</p>
                 </div>
                 <div class="md:col-span-2 max-w-full flex">
-                    <img src="/assets/img/project-example.png" class="rounded-xl">
+                    <img src="/assets/img/project5.png" class="rounded-xl">
                 </div>
             </div>
             <div class="grid md:grid-cols-3 gap-4 mb-20" style="grid-template-columns: 4fr 3fr 3fr;">
@@ -397,9 +526,54 @@ layout: plain
                     <p class="mb-4">Website design & development for an on-demand accountability app for solopreneurs.</p>
                 </div>
                 <div class="md:col-span-2 max-w-full flex">
-                    <img src="/assets/img/project-example.png" class="rounded-xl">
+                    <img src="/assets/img/project5.png" class="rounded-xl">
+                </div>
+            </div>
+            <div class="grid md:grid-cols-3 gap-4 mb-20" style="grid-template-columns: 4fr 3fr 3fr;">
+                <div class="md:col-span-1 max-w-full flex flex-col">
+                    <div class="mb-4">
+                        <a class="inline-block mr-3 py-1 px-3 rounded-[999px] text-xs bg-amber-200 rounded-[999px]">
+                            <div class="flex items-center gap-1">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                        class="icon icon-tabler icons-tabler-outline icon-tabler-access-point">
+                                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                        <path d="M12 12l0 .01" />
+                                        <path d="M14.828 9.172a4 4 0 0 1 0 5.656" />
+                                        <path d="M17.657 6.343a8 8 0 0 1 0 11.314" />
+                                        <path d="M9.168 14.828a4 4 0 0 1 0 -5.656" />
+                                        <path d="M6.337 17.657a8 8 0 0 1 0 -11.314" />
+                                    </svg>
+                                </div>
+                                <div class="">Pragmatic</div>
+                            </div>
+                        </a>
+                        <a class="inline-block mr-3 py-1 px-3 rounded-[999px] text-xs bg-amber-200 rounded-[999px]">
+                            <div class="flex items-center gap-1">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                        class="icon icon-tabler icons-tabler-outline icon-tabler-api-app">
+                                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                        <path d="M12 15h-6.5a2.5 2.5 0 1 1 0 -5h.5" />
+                                        <path d="M15 12v6.5a2.5 2.5 0 1 1 -5 0v-.5" />
+                                        <path d="M12 9h6.5a2.5 2.5 0 1 1 0 5h-.5" />
+                                        <path d="M9 12v-6.5a2.5 2.5 0 0 1 5 0v.5" />
+                                    </svg>
+                                </div>
+                                <div class="">Team-oriented</div>
+                            </div>
+                        </a>
+                    </div>
+                    <h3 class="text-3xl font-bold font-display mb-2">A big, boring form</h3>
+                    <p class="mb-4">Website design & development for an on-demand accountability app for solopreneurs.</p>
+                </div>
+                <div class="md:col-span-2 max-w-full flex">
+                    <img src="/assets/img/project5.png" class="rounded-xl">
                 </div>
             </div> -->
+
         </div>
     </div>
 </section>
