New homepage design

--- a/newhome.html
+++ b/newhome.html
@@ -804,12 +804,66 @@ layout: plain
 
 
 <!-- Testimonials -->
-<section>
+<section class="py-28">
     <div class="container px-8 max-w-screen-2xl mx-auto">
         <div>
-            <div class="py-28">
-                <h2 class="text-5xl font-bold font-display mb-4">Kind words</h2>
-                <p class="text-xl">Website design & development for an on-demand accountability app for solopreneurs.</p>
+            <h2 class="text-5xl font-bold font-display mb-4">Kind words</h2>
+            <p class="text-xl max-w-160 mb-12">Website design & development for an on-demand accountability app for solopreneurs.</p>
+        </div>
+    </div>
+
+    <div class="px-8 overflow-scroll">
+        <div class="relative" style="width: 160%;">
+            <div class="grid grid-cols-4 gap-4">
+                <div class="col-span-1 bg-emerald-100 rounded-xl p-8">
+                    <p>Jordan is a fantastic strategist and goal-oriented individual.</p>
+                    <div class="mt-6 flex">
+                        <div class="w-6 mr-2"><img class="rounded-[999px]"
+                                src="https://media.licdn.com/dms/image/D4E03AQHZmMBVaIJdDQ/profile-displayphoto-shrink_100_100/0/1695751688773?e=1727913600&v=beta&t=dxOGrbwLmtPHXJe3fo0AhUz-tV_CPG016Lgyy9CBocM"
+                                alt=""></div>
+                        <div class="grow">
+                            <p class="font-bold">Ryan Ferons</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-span-1 bg-emerald-100 rounded-xl p-8">
+                    <p>Jordan has a drive to make things happen. He is not afraid of his ideas, he is a clear thinker, and
+                        an advocate for a good cause.</p>
+                    <div class="mt-6 flex">
+                        <div class="w-6 mr-2"><img class="rounded-[999px]"
+                                src="https://media.licdn.com/dms/image/D4E03AQHZmMBVaIJdDQ/profile-displayphoto-shrink_100_100/0/1695751688773?e=1727913600&v=beta&t=dxOGrbwLmtPHXJe3fo0AhUz-tV_CPG016Lgyy9CBocM"
+                                alt=""></div>
+                        <div class="grow">
+                            <p class="font-bold">Travis Standley</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-span-1 bg-emerald-100 rounded-xl p-8">
+                    <p>Jordan has a drive to make things happen. He is not afraid of his ideas, he is a clear thinker, and
+                        an advocate
+                        for a good cause.</p>
+                    <div class="mt-6 flex">
+                        <div class="w-6 mr-2"><img class="rounded-[999px]"
+                                src="https://media.licdn.com/dms/image/D4E03AQHZmMBVaIJdDQ/profile-displayphoto-shrink_100_100/0/1695751688773?e=1727913600&v=beta&t=dxOGrbwLmtPHXJe3fo0AhUz-tV_CPG016Lgyy9CBocM"
+                                alt=""></div>
+                        <div class="grow">
+                            <p class="font-bold">Travis Standley</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-span-1 bg-emerald-100 rounded-xl p-8">
+                    <p>Jordan has a drive to make things happen. He is not afraid of his ideas, he is a clear thinker, and
+                        an advocate
+                        for a good cause.</p>
+                    <div class="mt-6 flex">
+                        <div class="w-6 mr-2"><img class="rounded-[999px]"
+                                src="https://media.licdn.com/dms/image/D4E03AQHZmMBVaIJdDQ/profile-displayphoto-shrink_100_100/0/1695751688773?e=1727913600&v=beta&t=dxOGrbwLmtPHXJe3fo0AhUz-tV_CPG016Lgyy9CBocM"
+                                alt=""></div>
+                        <div class="grow">
+                            <p class="font-bold">Travis Standley</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
