--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@ layout: plain
         <p>Senior Product Designer</p>
     </div>
     <div>
+        <a class="inline-block mr-4" href="https://labnotes.jordanbowman.design">
+            <img src="/assets/img/blog.svg" alt="Lab Notes">
+        </a>
         <a class="inline-block mr-4" href="https://linkedin.com/in/jrdnbwmn">
             <img src="/assets/img/linkedin.svg" alt="LinkedIn">
         </a>
